# curriculum_vitae

./: .gitignore  CMakeLists.txt  curriculum_vitae.tex  invited-talk.bib  invited-talk.tex  journal.bib  journal.tex  nopeer.bib  nopeer.tex  panel.bib  panel.tex  parse-bib.py  phd.bib  phd.tex  plainyr-rev.bst  poster.bib  poster.tex  presentation.bib  presentation.tex  professional-activities.tex  professional-activities.yaml  publications.bib  tutorial.bib  tutorial.tex  workshop.bib  workshop.tex  yaml2activities.py
